# TEST

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui  test.cpp
include/: mainwindow.h
